Correção dos nomes do operationId
